--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,23 +4,38 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk 
-        android:minSdkVersion="8" 
-        android:targetSdkVersion="21" />
+    <uses-sdk
+        android:minSdkVersion="8"
+        android:targetSdkVersion="11" />
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+	
     <application
+        android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:label="@string/app_name"
-            android:name=".MainActivity" >
-            <intent-filter >
+            android:name="com.mycompany.bsh.MainActivity"
+        android:label="@string/app_name" >
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+		<activity
+            android:label="@string/app_name"
+            android:name="com.mycompany.bsh.LoaderActivity" >
+        </activity>
+		<activity
+            android:label="@string/app_name"
+            android:name="com.mycompany.bsh.FileChooser" >
+        </activity>
+
     </application>
 
 </manifest>
